@@ -1,11 +1,17 @@
 2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>
 
+		* gameswf/gameswf_action.cpp
+		* gameswf/gameswf_value.cpp
+		A bit cleanup
+
+2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>
+
 		* gameswf/gameswf_as_classes/as_broadcaster.cpp
 		* gameswf/gameswf_object.cpp
 		* gameswf/gameswf_value.cpp
 		* gameswf/gameswf_value.h
 		Fixed as_value::operator=
-		for PROPERTY
+		We should set m_property_target also.
 
 2007-09-01  Vitaly Alexeev <tishka92@yahoo.com>
 
